Fix offsets used in the assembly code to save global registers into a jmp_buf, add a compile time assert to catch this kind of divergence in the C code. Move the fixed "%npc = %pc + 4" computation to longjmp, this frees the sigcontext sc_npc value. Use this space to save the savemask for siglongjmp (we have run out of space behind the globals). Fixes the tests/lib/libc/setjmp/t_threadjmp tests, and also hopefully fixes PR port-sparc64/44902.